ein wneig hatml

--- a/public/ttt.html
+++ b/public/ttt.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div id="userlist">
-        <b>Spieler</b>
+        <b>Spieler (Score)</b>
         <div id="users"></div>
 </div>
 <div id="gamechatlist">
