Nun mit einer CSS Choice Box

--- a/public/ttt.html
+++ b/public/ttt.html
@@ -19,6 +19,15 @@
 </div>
 
 <div id="game">
+	<div id="info-invisible"> 
+		<h2 id="anfrage2">Spielanfrage an Spieler xy</h2>
+		<input id="cancel" name="cancel" type="button" value="cancel">
+	</div>
+	<div id="choicebox-invisible"> 
+		<h2 id="anfrage">Spielanfrage von Spieler xy</h2>
+		<input id="yes" name="yes" type="button" value="Yes">
+		<input id="no" name="no" type="button" value="No">
+	</div>
 	<div class="board-invisible">
 	      <div class="row">
 			<div id="content">
