--- a/public/ttt.html
+++ b/public/ttt.html
@@ -53,7 +53,7 @@
 			<div id="users"></div>
 	</div>
 	<div id="gamechatlist">
-			<input id="data" style="width:200px;" />
+			<input id="data"  />
 			<input type="button" id="datasend" value="send" />
 			<div id="conversation"></div>
 	</div>
